Bug 456412 - Switching between alternative launcher widgets (e.g. Kickoff and Kicker) re-arranges Favorites to be in alphabetical order
Summary: Switching between alternative launcher widgets (e.g. Kickoff and Kicker) re-a...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Launcher (Kickoff) widget (other bugs)
Version First Reported In: master
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-07-06 19:00 UTC by Nate Graham
Modified: 2022-11-04 13:50 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2022-07-06 19:00:20 UTC
STEPS TO REPRODUCE
1. Arrange your favorites to the arrangement y prefer
2. Right-click on Kickoff > Show Alternatives
3. Choose Kicker and click Switch
4. Open Kicker

EXPECTED
Favorites are in the same order that they were in Kickoff.

ACTUAL
Favorites have been arranged alphabetically.
Comment 1 Bug Janitor Service 2022-10-25 09:06:05 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2263
Comment 2 Nate Graham 2022-11-04 13:50:15 UTC
Git commit 6779985ab6f9b10e25c3a74ceb0dcbb099a0bbd9 by Nate Graham, on behalf of Bharadwaj Raju.
Committed on 04/11/2022 at 13:50.
Pushed by ngraham into branch 'master'.

applets/kicker: Load favorites ordering from most recent applet as a fallback

For widgets using the Kicker backend:

If the current applet doesn't have any ordering defined, use the one from the
most recent applet with an ordering.
FIXED-IN: 5.27

M  +50   -4    applets/kicker/plugin/kastatsfavoritesmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/6779985ab6f9b10e25c3a74ceb0dcbb099a0bbd9