applets/kicker: Load favorites ordering from most recent applet as a fallback

For widgets using the Kicker backend:

If the current applet doesn't have any ordering defined, use the one from the
most recent applet with an ordering.

BUG: 456412
FIXED-IN: 5.27